--- a/style.css
+++ b/style.css
@@ -12,17 +12,70 @@ body {
 
 .container {
   margin: 50px auto;
-  max-width: 20.4375em;
+  max-width: 25.153846153846153em;
   background-color: white;
   border-radius: 15px;
+  text-align: left;
 }
 
-.article-picture img{
-  max-width: 100%;
+.preview {
+  margin: 2rem;
+}
+
+.title {
+  font-size: 1.2307692307692308em;
+  color: hsl(217, 19%, 35%);
+  line-height: 1.6;
+  margin: 1rem 0;
+}
+
+.content {
+  color: hsl(214, 17%, 51%);
+  line-height: 1.6;
+  margin: 0.5rem 0;
+}
+
+.article-picture {
+  height: 200px;
+}
+
+.article-picture img {
+  width: 100%;
+  height: 200px;
   border-radius: 15px 15px 0 0;
+}
+
+.contact {
+  padding: 2rem 0 1rem 0;
+  font-size: 1em;
+  display: flex;
+  justify-content: space-between;
 }
 
 .author-avatar img {
   max-width: 40px;
   border-radius: 50%;
+}
+
+.author-info {
+  margin-right: 3rem;
+}
+
+.author-name {
+  color: hsl(217, 19%, 35%);
+  font-weight: 700;
+}
+
+.date {
+  color: hsl(212, 23%, 69%);
+}
+
+.share {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background-color: hsl(210, 46%, 95%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
