--- a/style.css
+++ b/style.css
@@ -160,12 +160,25 @@ body {
   justify-content: space-between;
   position: absolute;
   left: 10rem;
-  bottom: 4rem;
+  bottom: 4.5rem;
   width: 300px;
   height: 50px;
   background-color: hsl(217, 19%, 35%);
   border-radius: 10px;
   
+}
+
+.share--popup::after {
+	content: '';
+	position: absolute;
+	width: 0;
+	height: 0;
+	top: 100%;
+	left: 12em; 
+	border: .75rem solid transparent;
+	border-bottom: none;
+	border-top-color: hsl(217, 19%, 35%);
+	
 }
 
 .share-icon {
