Lowered he artcle preview on the page

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .article_container {
-  margin: 50px auto;
+  margin: 10rem auto;
   max-width: 25em;
   background-color: white;
   border-radius: 15px;
